--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ img {
     color: #FFFFFF;
     font-size: 1.125rem;
     position: relative;
+    font-family: 'Poppins';
+    font-weight: 400;
 }
 
 .header .header-menu .header-menu-item a:after {
@@ -129,6 +131,8 @@ img {
     color: #FFFFFF;
     font-size: 4rem;
     line-height: 1.125;
+    font-family: 'Poppins';
+    font-weight: 600;
 }
 
 .introduction .introduction-content h1 span {
@@ -140,6 +144,8 @@ img {
     color: #B2B2B2;
     font-size: 1.5rem;
     line-height: 1.5;
+    font-family: 'Roboto';
+    font-weight: 400;
 }
 
 .introduction .introduction-content a {
@@ -152,8 +158,9 @@ img {
     font-size: 1.125rem;
     line-height: 1.33;
     text-transform: uppercase;
-    font-weight: bold;
     padding: 16px 32px;
+    font-family: 'Poppins';
+    font-weight: 600;
 }
 
 .introduction .introduction-content a:hover {
