--- a/css/style.css
+++ b/css/style.css
@@ -1,218 +1,8 @@
-body {
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import './global/global.css';
+@import './global/header.css';
 
-h1, 
-ul, 
-p {
-    margin: 0px;
-}
+/* Utils */
+@import './utils/components.css';
 
-ul {
-    padding: 0px;
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-img {
-    max-width: 100%;
-    display: block;
-}
-
-.header-bg {
-    background: #000000;
-}
-
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header .header-menu {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.header .header-menu .header-menu-item a {
-    padding: 16px 0px;
-    display: inline-block;
-    color: #FFFFFF;
-    font-size: 1.125rem;
-    position: relative;
-    font-family: 'Poppins';
-    font-weight: 400;
-}
-
-.header .header-menu .header-menu-item a:after {
-    content: '';
-    display: block;
-    width: 0px;
-    height: 2px;
-    margin-top: 4px;
-    background-color: #FFFFFF;
-    position: absolute;
-}
-
-.header .header-menu .header-menu-item a:hover:after {
-    width: 100%;
-    transition: 0.3s;
-}
-
-@media (max-width: 800px) {
-    .header .header-menu {
-        gap: 20px;
-    }
-
-    .header .header-menu .header-menu-item a {
-        background-color: #111111;
-        padding: 12px 16px;
-        border-radius: 4px;
-    }
-
-    .header .header-menu .header-menu-item a:hover {
-        background-color: #2E2E2E;
-    }
-
-    .header .header-menu .header-menu-item a:after {
-        display: none;
-    }
-}
-
-@media (max-width: 600px) {
-    .header .header-menu {
-        gap: 12px;
-    }
-
-    .header .header-menu .header-menu-item a {
-        padding: 8px 12px;
-        font-size: 0.875rem;
-    }
-}
-
-.introduction-bg {
-    background-color: #000000;
-    box-shadow: inset 0 -120px #FFFFFF;
-}
-
-.introduction {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 0px 40px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-    max-width: 1200px;
-}
-
-.introduction .introduction-content {
-    align-self: end;
-    padding-bottom: 200px;
-}
-
-.introduction .introduction-content h1 {
-    margin-bottom: 32px;
-    color: #FFFFFF;
-    font-size: 4rem;
-    line-height: 1.125;
-    font-family: 'Poppins';
-    font-weight: 600;
-}
-
-.introduction .introduction-content h1 span {
-    color: #FFBB00;
-}
-
-.introduction .introduction-content p {
-    margin-bottom: 20px;
-    color: #B2B2B2;
-    font-size: 1.5rem;
-    line-height: 1.5;
-    font-family: 'Roboto';
-    font-weight: 400;
-}
-
-.introduction .introduction-content a {
-    display: inline-block;
-    color: #332200;
-    background: linear-gradient(#FFBF00, #F2A50C);
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    font-size: 1.125rem;
-    line-height: 1.33;
-    text-transform: uppercase;
-    padding: 16px 32px;
-    font-family: 'Poppins';
-    font-weight: 600;
-}
-
-.introduction .introduction-content a:hover {
-    background: linear-gradient(#FFB60D, #E59317);
-}
-
-.introduction div img {
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-}
-
-@media (max-width: 1200px) {
-    .introduction .introduction-content h1 {
-        font-size: 3rem;
-    }
-
-    .introduction .introduction-content p {
-        font-size: 1.125rem;
-    }
-}
-
-@media (max-width: 800px) {
-    .introduction-bg {
-        background-color: #111111;
-        padding-top: 40px;
-        box-shadow: inset 0 -60px #FFFFFF;
-    }
-
-    .introduction {
-        grid-template-columns: 1fr;
-        gap: 32px;
-    }
-
-    .introduction .introduction-content {
-        padding-bottom: 0px;
-    }
-
-    .introduction .introduction-content h1 {
-        font-size: 2rem;
-        margin-bottom: 16px;
-    }
-
-    .introduction div img {
-        height: 300px;
-        width: 100%;
-    }
-}
-
-@media (max-width: 600px) {
-    .introduction .introduction-content a {
-        padding: 12px 16px;
-        font-size: 1rem;
-    }
-}
+/* Home */
+@import './home/introduction.css';
