feat(css/): added the variable colors to the properties of selectors

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 
 /* Utils */
 @import './utils/components.css';
+@import './utils/typography.css';
+@import './utils/colors.css';
 
 /* Home */
 @import './home/introduction.css';
