--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-    background: #000000;
+    background: var(--color-12);
 }
 
 .header {
@@ -24,7 +24,6 @@
 .header .header-menu .header-menu-item a {
     padding: 16px 0px;
     display: inline-block;
-    color: #FFFFFF;
     font-size: 1.125rem;
     position: relative;
     font-family: 'Poppins';
@@ -37,7 +36,7 @@
     width: 0px;
     height: 2px;
     margin-top: 4px;
-    background-color: #FFFFFF;
+    background-color: var(--color-00);
     transition: 0.3s;
     position: absolute;
 }
@@ -52,13 +51,13 @@
     }
 
     .header .header-menu .header-menu-item a {
-        background-color: #111111;
+        background-color: var(--color-11);
         padding: 12px 16px;
         border-radius: 4px;
     }
 
     .header .header-menu .header-menu-item a:hover {
-        background-color: #2E2E2E;
+        background-color: var(--color-10);
     }
 
     .header .header-menu .header-menu-item a:after {
