--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -1,7 +1,6 @@
 .introduction-bg {
-    background-color: #000000;
-    color: #FFFFFF;
-    box-shadow: inset 0 -120px #FFFFFF;
+    background-color: var(--color-12);
+    box-shadow: inset 0 -120px var(--color-00);
 }
 
 .introduction {
@@ -23,23 +22,10 @@
 
 .introduction .introduction-content h1 {
     margin-bottom: 32px;
-    font-size: 4rem;
-    line-height: 1.125;
-    font-family: 'Poppins';
-    font-weight: 600;
-}
-
-.introduction .introduction-content h1 span {
-    color: #FFBB00;
 }
 
 .introduction .introduction-content p {
     margin-bottom: 20px;
-    color: #B2B2B2;
-    font-size: 1.5rem;
-    line-height: 1.5;
-    font-family: 'Roboto';
-    font-weight: 400;
 }
 
 .introduction div img {
@@ -60,9 +46,9 @@
 
 @media (max-width: 800px) {
     .introduction-bg {
-        background-color: #111111;
+        background-color: var(--color-12);
         padding-top: 40px;
-        box-shadow: inset 0 -60px #FFFFFF;
+        box-shadow: inset 0 -60px var(--color-00);
     }
 
     .introduction {
