--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -2,15 +2,11 @@
     display: inline-block;
     color: var(--color-p05);
     background: linear-gradient(#FFBF00, #F2A50C);
-    border: none;
     border-radius: 4px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    font-size: 1.125rem;
-    line-height: 1.33;
     text-transform: uppercase;
     padding: 16px 32px;
-    font-family: 'Poppins';
-    font-weight: 600;
+    font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
 
 .button:hover {
