--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,11 +8,8 @@
     gap: 20px;
     align-items: center;
     justify-content: space-between;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .header .header-menu {
