--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -1,3 +1,12 @@
+.container {
+    max-width: 1200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .button {
     display: inline-block;
     color: var(--color-p05);
