style(css/home/technology.css): added the style of the article tag and HTML Structure in home page about the technology of the bikes. changed colors, typographies, position, font-size, width, height, background-colors, box-model

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 /* Home */
 @import './home/introduction.css';
+@import './home/technology.css';
 
 /* Bikes */
 @import './bikes/bikes-list.css';
