style(css/home/partners.css): added the style of partners section HTML Structure. changed positon, colors, borders, box-model

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 /* Home */
 @import './home/introduction.css';
 @import './home/technology.css';
+@import './home/partners.css';
 
 /* Bikes */
 @import './bikes/bikes-list.css';
