style(css/home/evidence.css): stylized the section of evidence HTML Structure. changed position, display, color, typography, box-model

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import './home/introduction.css';
 @import './home/technology.css';
 @import './home/partners.css';
+@import './home/evidence.css';
 
 /* Bikes */
 @import './bikes/bikes-list.css';
