style: added a new button component, changed colors and backgrounds. a gray button with white font color

--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -16,6 +16,7 @@
     text-transform: uppercase;
     padding: 16px 32px;
     font: 600 1.125rem/1.35 'Poppins', sans-serif;
+    max-width: max-content;
 }
 
 .button:hover {
@@ -27,6 +28,15 @@
         padding: 12px 16px;
         font-size: 1rem;
     }
+}
+
+.button.secondary {
+    background: var(--color-10);
+    color: var(--color-02);
+}
+
+.button.secondary:hover {
+    background: var(--color-09);
 }
 
 .link {
