--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -57,3 +57,26 @@
 .link:hover {
     color: var(--color-00);
 }
+
+.title-bg {
+    background-color: var(--color-11);
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.title p {
+    margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+    .title-bg {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .title p {
+        font-size: 1rem;
+        text-transform: lowercase;
+        font-weight: 400;
+    }
+}
