style: added style to the intire 'insurance' page HTML Structure. changed color, typography, position, box-model, background-color, display

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
 
 /* Insurance */
 @import './insurance/insurance.css';
+@import './insurance/advantages.css';
+@import './insurance/faq.css';
 
 /* Terms */
 @import './terms/terms.css'
