--- a/css/insurance/insurance.css
+++ b/css/insurance/insurance.css
@@ -11,6 +11,10 @@
     align-items: center;
 }
 
+#insurance .insurance {
+    padding-top: 0px;
+}
+
 .insurance h2 {
     grid-column: 1 / -1;
     margin-bottom: 60px;
@@ -21,6 +25,7 @@
     padding: 32px 32px 32px 60px;
     display: grid;
     grid-template-columns: 1fr auto;
+    border-radius: 4px;
 }
 
 .insurance .insurance-item h3 {
