fix: changed the padding of a list of bikes when we have a id '#bike' as a element parent of this list

--- a/css/bikes/bikes-list.css
+++ b/css/bikes/bikes-list.css
@@ -17,6 +17,10 @@
     overflow-x: auto;
 }
 
+#bike .bikes-list ul {
+    padding: 0px 0px 20px 0px;
+}
+
 .bikes-list ul li {
     min-width: 280px;
 }
