style: added all the style of the page about the bikes 'Nimbus Stark', 'Magic Might' and 'Nebula Cosmic'. The style is the same to all of those pages. Changed colors, background-colors, position, box-shadow, display, box model, typography

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
 /* Bikes */
 @import './bikes/bikes.css';
 @import './bikes/bikes-list.css';
+@import './bike/bike.css';
+@import './bike/bike-insurance.css';
 
 /* Insurance */
 @import './insurance/insurance.css';
