style: added style to the first part of the page called 'contact'. changed backgrounds, colors, typography and box-model where we have the address, phone numbers, social medias, emails and a form

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import './utils/components.css';
 @import './utils/typography.css';
 @import './utils/colors.css';
+@import './utils/form.css';
 
 /* Home */
 @import './home/introduction.css';
@@ -24,5 +25,9 @@
 @import './insurance/advantages.css';
 @import './insurance/faq.css';
 
+/* Contact */
+@import './contact/contact.css';
+@import './contact/stores.css';
+
 /* Terms */
-@import './terms/terms.css'
+@import './terms/terms.css';
