style: added the style of 'budget' page. Changed colors, background-colors, typographies, box-model, display, hover effects, focus effects

--- a/css/style.css
+++ b/css/style.css
@@ -29,5 +29,8 @@
 @import './contact/contact.css';
 @import './contact/stores.css';
 
+/* Budget */
+@import './budget/budget.css';
+
 /* Terms */
 @import './terms/terms.css';
