--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -26,12 +26,12 @@
 
 .contact .contact-data {
     border-radius: 5px 0px 0px 5px;
-    background: var(--color-12);
+    background: var(--color-12) url('../../img/svg/dec/bottom-left.svg') no-repeat bottom 20px left 20px;
 }
 
 .contact .contact-form {
     border-radius: 0px 5px 5px 0px;
-    background: var(--color-00);
+    background: var(--color-00) url('../../img/svg/dec/bottom-right.svg') no-repeat bottom 20px right 20px;
 }
 
 .contact .contact-data h2 {
@@ -90,6 +90,7 @@
 
     .contact .contact-data {
         border-radius: 5px 5px 0px 0px;
+        background: var(--color-12);
     }
     
     .contact .contact-form {
