--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -85,6 +85,10 @@
     padding-bottom: 60px;
 }
 
+.title {
+    background: url('../../img/svg/dec/top-right.svg') no-repeat top right 20px;
+}
+
 .title p {
     margin-bottom: 4px;
 }
