--- a/css/home/evidence.css
+++ b/css/home/evidence.css
@@ -15,6 +15,7 @@
 .evidence .evidence-content {
     padding: 40px 40px 80px 80px;
     align-self: end;
+    background: url('../../img/svg/dec/bottom-right.svg') no-repeat bottom 40px right 40px;
 }
 
 .evidence .evidence-content p {
@@ -45,6 +46,12 @@
 
 .evidence span {
     display: inline-block;
+}
+
+@media (min-width: 1200px) {
+    .evidence div img {
+        max-height: 520px;
+    }
 }
 
 @media (max-width: 800px) {
