--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -1,5 +1,5 @@
 .introduction-bg {
-    background-color: var(--color-12);
+    background: var(--color-12) url('../../img/svg/dec/bottom-left.svg') no-repeat bottom 160px left 20px;
     box-shadow: inset 0 -120px var(--color-00);
 }
 
