feat: added a script for the user to see which page they are on. now the page name in the header gets an underline

--- a/css/global/header.css
+++ b/css/global/header.css
@@ -35,7 +35,8 @@
     position: absolute;
 }
 
-.header .header-menu .header-menu-item a:hover:after {
+.header .header-menu .header-menu-item a:hover::after,
+.header .header-menu .header-menu-item a.active::after {
     width: 100%;
 }
 
