--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import './utils/typography.css';
 @import './utils/colors.css';
 @import './utils/form.css';
+@import './utils/animation.css';
 
 /* Home */
 @import './home/introduction.css';
